--- a/K_Nearest_Neighbors.ipynb
+++ b/K_Nearest_Neighbors.ipynb
@@ -711,20 +711,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-23T03:54:29.560184Z",
-     "start_time": "2020-08-23T03:54:29.503Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ind<-sample(2,nrow(normalized_iris),replace = TRUE,prob = c(0.7,0.3))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
@@ -734,6 +720,7 @@
    },
    "outputs": [],
    "source": [
+    "ind<-sample(2,nrow(normalized_iris),replace = TRUE,prob = c(0.7,0.3))\n",
     "iris_train<-normalized_iris[ind==1,1:4]\n",
     "y_train<-normalized_iris[ind==1,5]\n",
     "\n",
